--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
     <title>Document</title>
   </head>
   <body>
-    </body>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <div class="topnav-right">
+        <a href="#search">Search</a>
+        <a href="#about">About</a>
+      </div>
+    </div>
+  </body>
 </html>
