add accomodation page to main page

--- a/accomodations.html
+++ b/accomodations.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="topnav">
-      <a href="index.html">Home</a>
-      <a href="accomodations.html">Accommodations</a>
+      <a href="#home">Home</a>
+      <a href="#home">Accommodations</a>
       <a href="#news">Activities</a>
       <a href="#contact">Travel arrangements</a>
 
