add pages for accomodation and gallery

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <div class="topnav">
       <a href="index.html">Home</a>
       <a href="accomodations.html">Accommodations</a>
-      <a href="#news">Activities</a>
-      <a href="#contact">Travel arrangements</a>
-
-      <a href="#pictures">Gallery</a>
-      <a href="#contact">Contact</a>
+      <a href="activities.html">Activities</a>
+      <a href="pictures.html">Gallery</a>
+      <a href="contact.html">Contact</a>
     </div>
   </body>
 </html>
