add hero text to page

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
       <a href="pictures.html">Gallery</a>
       <a href="contact.html">Contact</a>
     </div>
+    <div class="hero-image">
+      <div class="hero-text">
+        <h1 style="font-size: 50px">FayGray Resort</h1>
+        <h3>Home away from home</h3>
+      </div>
+    </div>
   </body>
 </html>
