add images to gallery file

--- a/pictures.html
+++ b/pictures.html
@@ -14,5 +14,14 @@
       <a href="pictures.html">Gallery</a>
       <a href="contact.html">Contact</a>
     </div>
+    <div class="contentbox">
+        <p>The resort</p>
+        <img src="" alt="">
+         <img src="" alt="">
+          <img src="" alt="">
+           <img src="" alt="">
+
+
+    </div>
   </body>
 </html>
