--- a/pictures.html
+++ b/pictures.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css">
     <title>Resort Website</title>
   </head>
   <body>
@@ -16,10 +17,11 @@
     </div>
     <div class="contentbox">
         <p>The resort</p>
-        <img src="" alt="">
-         <img src="" alt="">
-          <img src="" alt="">
-           <img src="" alt="">
+        <img src="/images/francesca-grima-SkyQMRrB5pI-unsplash.jpg" alt="" width="800px">
+         <img src="/images/ian-dooley-hpTH5b6mo2s-unsplash.jpg" alt="" width="700px">
+
+          <img src="/images/julian-hochgesang-Dkn8-zPIbwo-unsplash.jpg" alt="" width="800px">
+           <img src="/images/roberto-nickson-HmieZw0YOC0-unsplash.jpg" alt="" width="800px">
 
 
     </div>
