--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   </div>
   <div class="row">
     <div class="column">
-      <img src="/w3images/map.jpg" style="width:100%">
+      <img src="/images/julian-hochgesang-Dkn8-zPIbwo-unsplash.jpg" style="width:100%">
     </div>
     <div class="column">
       <form action="/action_page.php">
