--- a/index.html
+++ b/index.html
@@ -49,5 +49,34 @@
     </div>
   </div>
 </div>
+		<footer class="footer-distributed">
+
+			<div class="footer-right">
+
+				<a href="#"><i class="fa fa-facebook"></i></a>
+				<a href="#"><i class="fa fa-twitter"></i></a>
+				<a href="#"><i class="fa fa-linkedin"></i></a>
+				<a href="#"><i class="fa fa-github"></i></a>
+
+			</div>
+
+			<div class="footer-left">
+
+				<p class="footer-links">
+					<a class="link-1" href="index.html">Home</a>
+
+					<a href="accomodations.html">Accomodations</a>
+
+					<a href="activities.html">Activities</a>
+
+					<a href="pictures.html">Gallery</a>
+
+					<a href="contact.html">Contact</a>
+				</p>
+
+				<p>FayGray Resort &copy; 2023</p>
+			</div>
+
+		</footer>
   </body>
 </html>
